--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sequelize": "^4.41.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.5"
+    "nodemon": "^1.18.5",
+    "prettier": "^2.3.0"
   }
 }
